--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,22 @@
         android:theme="@style/Theme.Tute03MadJune"
         tools:targetApi="31">
         <activity
-            android:name=".EditProfileView"
-             />
+            android:name=".MainProfileViewCustomer"
+            android:exported="false" />
+        <!-- Set SplashScreen as the launcher activity -->
+        <activity
+            android:name=".SplashScreen"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainHomeForTasker"
+            android:exported="false" />
+        <activity android:name=".EditProfileView" />
         <activity
             android:name=".MainProfileView"
             android:exported="false" />
@@ -32,22 +46,10 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity> <!-- Add GetStarted activity here -->
+            android:exported="false" /> <!-- Remove launcher intent filter from GetStarted -->
         <activity
             android:name=".GetStarted"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
